--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat is a non-profit organization creating art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est une organisation à but non-lucratif créant de l'art pour la conservation des espèces en péril et de leurs habitats naturels." />
+  <meta name="description" content="Animat Habitat is a non-profit organization creating art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est une organisation à but non lucratif créant de l'art pour la conservation des espèces en péril et de leurs habitats naturels." />
   <meta name="keywords" content="animat, animat habitat, wildlife art canada, wildlife art studio, wildlife conservation art" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -164,7 +164,7 @@
 
         <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index, index du site officiel."><font class="en">Site Index</font><font class="fr">Index du site Web.</font></a></p>
 
-        <p class="linebreak small"><font class="en">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Incorporée au Canada comme organisation à but non lucratif #&nbsp;942675-2. &laquo;&nbsp;Animat Habitat&nbsp;&raquo; est une marque non enregistrée qui est protégée aux fins de l'identité corporatif. Les documents d'organisation sont archivés et classés dans le <a href="s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> chez Animat Habitat.</font></p>
+        <p class="linebreak small"><font class="en">Incorporated in Canada as non-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Incorporée au Canada comme organisation à but non lucratif #&nbsp;942675-2. &laquo;&nbsp;Animat Habitat&nbsp;&raquo; est une marque non enregistrée qui est protégée aux fins de l'identité corporatif. Les documents d'organisation sont archivés et classés dans le <a href="s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> chez Animat Habitat.</font></p>
 
         <p class="linebreak small"><font class="en">Thank you for visiting.</font><font class="fr">Merci pour votre visite.</font></p>
 
