--- a/patron/index.html
+++ b/patron/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat is a non-profit organization founded in Canada.&nbsp;&#92;&nbsp;Animat Habitat est une organisation à but non-lucratif fondée au Canada." />
+  <meta name="description" content="Animat Habitat is a non-profit organization founded in Canada.&nbsp;&#92;&nbsp;Animat Habitat est une organisation à but non lucratif fondée au Canada." />
   <meta name="keywords" content="wildlife art canada, wildlife art patron, wildlife art studio, wildlife art org, wildlife conservation art" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -135,7 +135,7 @@
 
       <div>
         <h3 class="linebreak"><font class="en">Official Selections</font><font class="fr">Sélections officielles</font></h3>
-        <p><font class="en">Animat Habitat creates art for the conservation of endangered species and their natural habitats. As a not-for-profit organization that has operated on love and a shoestring, it is an honor to support a small selection of wildlife conservation projects. As a small art studio in Canada, it is not in our interest to overextend commitments. Instead, we believe in on-going partnerships to support the long term sustainability of select projects. These are those wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Animat Habitat crée de l'art pour la conservation des espèces en péril et de leurs habitats naturels. En tant qu'organisation à but non lucratif, nous avons honneur de soutenir une petite sélection de projets de conservation de la nature. En tant que petit studio d'art au Canada, nous n'avons pas intérêt à dépasser nos engagements. Au lieu de cela, nous croyons aux partenariats continus pour soutenir la durabilité à long terme de ces projets sélectionnés. Ce sont les projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
+        <p><font class="en">Animat Habitat creates art for the conservation of endangered species and their natural habitats. As a non-profit organization that has operated on love and a shoestring, it is an honor to support a small selection of wildlife conservation projects. As a small art studio in Canada, it is not in our interest to overextend commitments. Instead, we believe in on-going partnerships to support the long term sustainability of select projects. These are those wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Animat Habitat crée de l'art pour la conservation des espèces en péril et de leurs habitats naturels. En tant qu'organisation à but non lucratif, nous avons honneur de soutenir une petite sélection de projets de conservation de la nature. En tant que petit studio d'art au Canada, nous n'avons pas intérêt à dépasser nos engagements. Au lieu de cela, nous croyons aux partenariats continus pour soutenir la durabilité à long terme de ces projets sélectionnés. Ce sont les projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
 
       </div>
 
