--- a/canon/index.html
+++ b/canon/index.html
@@ -146,7 +146,9 @@
     <section class="single">
       <div class="quote text-center">
 
-        <h4><font class="en"><font class="color text-quote">&ldquo;</font><font class="thin">Until the lions have their own historians, the history of the hunt will always glorify the hunter.</font><font class="color text-quote">&rdquo;</font></font><font class="fr">&laquo;&nbsp;<font class="thin">Jusqu'à ce que les lions aient leurs propres historiens, l'histoire de la chasse glorifiera toujours le chasseur.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;<font class="en">African proverb inscribed in the novel by Chinua Achebe,</font><font class="fr">Proverbe africain inscrit dans le roman par Chinua Achebe,</font></font> <i>Things Fall Apart</i> (<font class="fr">&nbsp;</font>1958<font class="fr">&nbsp;</font>)</h4>
+        <h4><font class="en"><font class="color text-quote">&ldquo;</font><font class="thin">Until the lions have their own historians, the history of the hunt will always glorify the hunter.</font><font class="color text-quote">&rdquo;</font></font><font class="fr">&laquo;&nbsp;<font class="thin">Jusqu'à ce que les lions aient leurs propres historiens, l'histoire de la chasse glorifiera toujours le chasseur.</font>&nbsp;&raquo;</font>
+
+          <br><font class="color small thin">&mdash;&nbsp;<font class="en">African proverb inscribed in the novel by Chinua Achebe,</font><font class="fr">Proverbe africain inscrit dans le roman par Chinua Achebe,</font> <i>Things Fall Apart</i> (<font class="fr">&nbsp;</font>1958<font class="fr">&nbsp;</font>)</font></h4>
 
         <!-- Until the lion learns how to write, every story will glorify the hunter. - Zimbabwe proverb -->
 
