--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -572,17 +572,17 @@
 
             <h5><a class="overscore" onclick="toggle_wabanaki();">Wabinaki</a></h5>
             <div class="clear" id="toggle-wabanaki">
-              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi’kmaq&hellip;</i> <a onclick="toggle_wabanaki();">De plus</a>.</p>
+              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi'kmaq&hellip;</i> <a onclick="toggle_wabanaki();">De plus</a>.</p>
 
             </div>
             <div class="clear" id="wabanaki">
-              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi’kmaq, les Peskotomuhkati, les Penobscot et les Wolastoqiyik. Ces Premières Nations sont celles qui sont inscrites dans les traités de paix et d’amitié maritimes conclus avec la Couronne. Les territoires Abénakis demeurent non cédés.</i></p>
+              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi'kmaq, les Peskotomuhkati, les Penobscot et les Wolastoqiyik. Ces Premières Nations sont celles qui sont inscrites dans les traités de paix et d’amitié maritimes conclus avec la Couronne. Les territoires Abénakis demeurent non cédés.</i></p>
 
               <p class="linebreak small title">Traités de paix et d’amitié (&nbsp;1725-1779&nbsp;)<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Traités de la Couronne">6</a>&nbsp;]</sup></p>
               <ul class="small">
                 <li>Nation Abénaquise</li>
 
-                <li>Première Nations Mi’kmaq</li>
+                <li>Première Nations Mi'kmaq</li>
 
                 <li>Nation Peskotomuhkati</li>
 
@@ -696,7 +696,7 @@
 
                 <li>Dakota, Nakota &middot; Nations Sioux</li>
 
-                <li>Nation Tsuutʼina</li>
+                <li>Nation Tsuut'ina</li>
 
               </ul>
 
@@ -721,7 +721,7 @@
 
               <p class="small">En savoir plus sur les Sioux en Očhéthi Šakówiŋ.</p>
 
-              <p class="small">En savoir plus sur les <a href="../../url/-com/tsuutina/" title="Nation Tsuutʼina" target="_blank">Tsuutʼina</a>, autrefois connus comme Sarcee.</p>
+              <p class="small">En savoir plus sur les <a href="../../url/-com/tsuutina/" title="Nation Tsuut'ina" target="_blank">Tsuut'ina</a>, autrefois connus comme Sarcee.</p>
 
             </div>
 
@@ -754,8 +754,8 @@
 
                 <li>Revendication territoriale des Dénés et Métis du Sahtu (&nbsp;1994&nbsp;)</li>
 
-                <li>Tłı̨chǫ Nation (&nbsp;2005&nbsp;) [<a href="../../url/fn/tlicho/" title="Tłı̨chǫ Ndekʼàowo" target="_blank">tlicho.ca</a>]</li>
-                <!-- Tłı̨chǫ Ndekʼàowo -->
+                <li>Tłı̨chǫ Nation (&nbsp;2005&nbsp;) [<a href="../../url/fn/tlicho/" title="Tłı̨chǫ Ndek'àowo" target="_blank">tlicho.ca</a>]</li>
+                <!-- Tłı̨chǫ Ndek'àowo -->
 
                 <li>Délı̨nę (&nbsp;2015&nbsp;)<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Self-Government">9</a>&nbsp;]</sup></li>
 
@@ -777,7 +777,7 @@
 
                 <li>Première Nation Tr'ondëk Hwëch'in (&nbsp;1998&nbsp;) [<a href="../../url/fn/trondek/" title="Première Nation Tr'ondëk Hwëch'in" target="_blank">trondek.ca</a>]</li>
 
-                <li>Conseil de Ta’an Kwäch’än (&nbsp;2002&nbsp;) [<a href="../../url/fn/taan/" title="Conseil de Ta’an Kwäch’än" target="_blank">taan.ca</a>]</li>
+                <li>Conseil de Ta'an Kwäch'än (&nbsp;2002&nbsp;) [<a href="../../url/fn/taan/" title="Conseil de Ta'an Kwäch'än" target="_blank">taan.ca</a>]</li>
 
                 <li>Première Nation Kluane (&nbsp;2004&nbsp;) [<a href="../../url/fn/k/" title="Première Nation Kluane" target="_blank">kfn.ca</a>]</li>
 
@@ -797,7 +797,7 @@
 
 
             <h5 class="linebreak"><a class="overscore" onclick="toggle_pacific_coast();">Côte Pacifique</a></h5>
-            <!-- Gitga’at Lax Yuup, Gitxsan Lax Yip -->
+            <!-- Gitga'at Lax Yuup, Gitxsan Lax Yip -->
             <div class="clear" id="toggle-pacific-coast">
               <p class="small"><i>Les peuples de l'eau salée et de la haute mer et ainsi de suite&mdash;les peuples autochtones du Canada le long de la côte Pacifique de l’Île de la Tortue comprennent les Haïda, les Kwakiutl, les Tlingit, les Tsimshian, les Sékani et bien d'autres. Historiquement&hellip;</i> <a onclick="toggle_pacific_coast();">De plus</a>.</p>
 
@@ -813,7 +813,7 @@
 
                 <li>Première Nation Esquimalt</li>
 
-                <li>Première Nation Kwakiutl [<a href="../../url/fn/bc-kwakiutl/" title="Première Nation Kwakwaka’wakw Awi’nagwis (Kwakiutl)" target="_blank">kwakiutl.bc.ca</a>]</li>
+                <li>Première Nation Kwakiutl [<a href="../../url/fn/bc-kwakiutl/" title="Première Nation Kwakwaka'wakw Awi'nagwis (Kwakiutl)" target="_blank">kwakiutl.bc.ca</a>]</li>
 
                 <li>Première Nations Pauquachin et Tseycum</li>
 
@@ -825,7 +825,7 @@
 
               </ul>
 
-              <p class="linebreak small">En savoir plus sur les nations membres de <a href="../../url/fn/temexw/" title="Te’mexw Treaty Association (&nbsp;TTA&nbsp;)" target="_blank">Te’mexw</a>.</p>
+              <p class="linebreak small">En savoir plus sur les nations membres de <a href="../../url/fn/temexw/" title="Te'mexw Treaty Association (&nbsp;TTA&nbsp;)" target="_blank">Te'mexw</a>.</p>
 
               <p class="linebreak small title">Traités de la Colombie-Britannique<sup>&nbsp;[<a class="button" onclick="fn();" title="Négociations de traités en Colombie-Britannique">8</a>]</sup></p>
               <ul class="small">
@@ -834,7 +834,7 @@
 
                 <li>Gitxsan Nations [<a href="../../url/fn/gitxsan/" title="Gitxsan Huwilp Government" target="_blank">gitxsan.ca</a>]</li>
 
-                <li>Nations Gwa’sala-‘Nakwaxda’xw [<a href="../../url/fn/gwanak/" title="Nations Gwa’sala-‘Nakwaxda’xw" target="_blank">gwanaknations.ca</a>]</li>
+                <li>Nations Gwa'sala-‘Nakwaxda'xw [<a href="../../url/fn/gwanak/" title="Nations Gwa'sala-‘Nakwaxda'xw" target="_blank">gwanaknations.ca</a>]</li>
 
                 <li>Nation Haisla [<a href="../../url/fn/haisla/" title="Nation Haisla" target="_blank">haisla.ca</a>]</li>
 
@@ -856,9 +856,9 @@
 
                 <li>Première Nation Tlingit de Taku River [<a href="../../url/fn/trt/" title="Première Nation Tlingit de Taku River" target="_blank">trtfn.com</a>]</li>
 
-                <li>Lax Kw’Alaams, Tsimshian &middot; Nations Ts’msyen</li>
+                <li>Lax Kw'Alaams, Tsimshian &middot; Nations Ts'msyen</li>
 
-                <li>Sekani, McLeod Lake, Wet’suwet’en &middot; Nations Tse’khene</li>
+                <li>Sekani, McLeod Lake, Wet'suwet'en &middot; Nations Tse'khene</li>
 
                 <li>Nation Tsleil-Waututh [<a href="../../url/fn/tw/" title="Nation Tsleil-Waututh" target="_blank">twnation.ca</a>]</li>
 
@@ -870,7 +870,7 @@
 
               <ul class="small">
 
-                <li>shíshálh Nation (&nbsp;1986&nbsp;) [<a href="../../url/fn/shishalh/" title="Bande indienne Sechelt (Nation shíshálh)" target="_blank">shishalh.com</a>]<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Self-Government">9</a>&nbsp;]</sup></li>
+                <li>Nation Shíshálh (&nbsp;1986&nbsp;) [<a href="../../url/fn/shishalh/" title="Nation shíshálh (Bande indienne Sechelt)" target="_blank">shishalh.com</a>]<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Self-Government">9</a>&nbsp;]</sup></li>
 
                 <li>Nation Nisga'a (&nbsp;2000&nbsp;) [<a href="../../url/fn/nisgaa/" title="Nation Nisga'a" target="_blank">nisgaanation.ca</a>]</li>
 
@@ -884,7 +884,7 @@
 
                 <li>Nation Tla'amin (&nbsp;2014&nbsp;) [<a href="../../url/fn/tlaamin/" title="Nation Tla'amin" target="_blank">tlaaminnation.com</a>]</li>
 
-                <li>Première Nation Lheidli T’enneh (&nbsp;paraphé, 2018&nbsp;) [<a href="../../url/fn/lheidli/" title="Première Nation Lheidli T’enneh" target="_blank">lheidli.ca</a>]</li>
+                <li>Première Nation Lheidli T'enneh (&nbsp;paraphé, 2018&nbsp;) [<a href="../../url/fn/lheidli/" title="Première Nation Lheidli T'enneh" target="_blank">lheidli.ca</a>]</li>
 
               </ul>
 
@@ -894,7 +894,7 @@
 
               </ul>
 
-              <!-- <p class="linebreak small">En savoir plus sur les <a href="../../url/fn/laxkwalaams/" title="Tribus alliées de Lax Kw’Alaams" target="_blank">tribus alliées de Lax Kw’Alaams</a>.</p> -->
+              <!-- <p class="linebreak small">En savoir plus sur les <a href="../../url/fn/laxkwalaams/" title="Tribus alliées de Lax Kw'Alaams" target="_blank">tribus alliées de Lax Kw'Alaams</a>.</p> -->
 
               <p class="linebreak small">En savoir plus sur le <a href="../../url/fn/carriersekani/" title="Conseil tribal Carrier Sekani" target="_blank">Conseil tribal Carrier Sekani</a>.</p>
 
