--- a/patron/index.html
+++ b/patron/index.html
@@ -60,74 +60,21 @@
 
           <pre class="thin"></pre>
 
-          <p class="linebreak small"><font class="en">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat</font><font class="fr">Votre don &ndash; incluant information de carte de débit ou de crédit &ndash; est accepté avec PayPal. Pour un don de plus de 250&nbsp;$&nbsp;CA &ndash; et pour obtenir des instructions de virement sécurisé &ndash; veuillez contacter le secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
+          <p class="linebreak small"><font class="en">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$500 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat</font><font class="fr">Votre don &ndash; incluant information de carte de débit ou de crédit &ndash; est accepté avec PayPal. Pour un don de plus de 500&nbsp;$&nbsp;CA &ndash; et pour obtenir des instructions de virement sécurisé &ndash; veuillez contacter le secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
 
         </div>
 
         <div class="clear-top">
-          <a href="25/" title="PayPal" target="_blank" rel="noopener"><button>Patron <font class="small"><font class="en">CA$</font>25<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
+          <!-- <a href="25/" title="PayPal" target="_blank" rel="noopener"><button>Patron <font class="small"><font class="en">CA$</font>25<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a> -->
+          <a href="s/" title="PayPal / En / Animat Habitat (Annual)"><button><font class="en">Annual Membership <font class="small">CA$</font></font><font class="fr">Adhésion annuelle <font class="small">$&nbspCA</font></font></button></a>
           <p class="linebreak"><font class="en">Support independent art at Animat Habitat as a Patron Member, and you will receive:</font><font class="fr">Soutenez l'art indépendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
           <ul class="square">
-            <li class="linebreak"><font class="en">Certificate of Membership. (Annual)</font><font class="fr">Certificat d'adhésion. (&nbsp;Annuel&nbsp;)</font></li>
+            <li class="linebreak"><font class="en">Certificate of Membership.</font><font class="fr">Certificat d'adhésion.</font> (<font class="fr">&nbsp;</font>Minimum <font class="en">CA$</font>100<font class="fr">&nbsp;$&nbsp;CA&nbsp;</font>)</li>
             <li><font class="en">Letters from the Editor and President. (Optional)</font><font class="fr">Lettres de l'éditeur et du président. (&nbsp;Optionnel&nbsp;)</font></li>
-            <li><font class="en">Early access to beta programs, to exhibition passes and to limited edition prints.</font><font class="fr">Accès anticipé aux programmes bêta, aux billets d'exposition et aux tirages en édition limitée.</font></li>
+            <li><font class="en">Early access to beta programs, to exhibition passes and to limited edition prints. (Optional)</font><font class="fr">Accès anticipé aux programmes bêta, aux billets d'exposition et aux tirages en édition limitée. (&nbsp;Optionnel&nbsp;)</font></li>
 
           </ul>
-
-        </div>
-
-      </div>
-
-      <div>
-        <h3 class="linebreak"><font class="en">Official Councils</font><font class="fr">Conseils officiels.</font></h3>
-        <p><font class="en">Support independent art at Animat Habitat as a member of a council.</font><font class="fr">Soutenez l'art indépendant chez Animat Habitat en tant que membre d'un conseil.</font></p>
-
-      </div>
-
-      <div class="clear diptych">
-
-        <div class="clear-top">
-          <a href="250/" target="_blank" title="PayPal / Periwinkle Council at Animat Habitat" rel="noopener"><button>Periwinkle <font class="small"><font class="en">CA$</font>250<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
-          <p class="linebreak"><font class="en">Support research and development at Animat Habitat as a Periwinkle Council member, and you will receive:</font><font class="fr">Soutenez la recherche et le développement chez Animat Habitat en tant que membre du Conseil Pervenche, et vous recevrez&nbsp;:</font></p>
-
-          <p class="linebreak"><i><font class="en">All patron benefits plus&hellip;</font><font class="fr">Tous les avantages des patrons plus&hellip;</font></i></p>
-
-          <ul class="lineend square">
-            <li class="linebreak"><font class="en">Voice on the Periwinkle Council.</font><font class="fr">Voix sur le Conseil Pervenche.</font></li>
-            <li><font class="en">Access to Periwinkle Blue screenings.</font><font class="fr">Accès aux séances Bleu Pervenche.</font></li>
-          </ul>
-
-          <pre class="thin"></pre>
-
-          <!-- <p class="linebreak small"><i><font class="en">This council is for anyone terribly partial to the periwinkle blue&hellip;</font><font class="fr">Ce conseil est pour ceux qui sont terriblement partiels au bleu pervenche&hellip;</font></i></p> -->
-
-          <p class="linebreak small"><font class="en">Members of the Periwinkle Council have an opportunity to submit nominees for the Annual Nature Documentary Award, to access Periwinkle Blue screenings of select nominees, and to vote for a best film or series or mini-series of the year.</font><font class="fr">Les membres du Conseil Pervenche ont la possibilité de soumettre des nominés pour la revue annuelle des documentaire sur la nature, d'accéder à des projections privées de certains nominés et de voter pour le meilleur film, série ou mini-série de l'année.</font></p>
-
-        </div>
-
-        <div class="clear-top">
-          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small"><font class="en">CA$</font>2<font class="en">,</font><font class="fr">&nbsp;</font>500<font class="fr">&nbsp;$&nbspCA par&nbsp;an</font><font class="en"> per&nbsp;yr</font></font></button></a>
-
-          <div class="color" id="silver-council">
-
-            <p>For secure wiring instructions, please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions,%C2%A0Silver" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;:&nbsp;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement sécurisé, veuillez contacter le secrétariat chez Animat Habitat.</font></p>
-
-          </div>
-
-          <p class="linebreak"><font class="en">Support exhibitions and publications at Animat Habitat as a Silver Council member, and you will receive:</font><font class="fr">Soutenez les expositions et les publications chez Animat Habitat en tant que membre du Conseil Silver, et vous recevrez&nbsp;:</font></p>
-
-          <p class="linebreak"><i><font class="en">All patron benefits plus&hellip;</font><font class="fr">Tous les avantages des patrons plus&hellip;</font></i></p>
-
-          <ul class="lineend square">
-            <li class="linebreak"><font class="en">Voice on the Silver Council.</font><font class="fr">Voix sur le Conseil Silver.</font></li>
-            <li><font class="en">Access to the Member Handbook.</font><font class="fr">Accès au manuel du membre.</font></li>
-            <li><font class="en">Patron credit in publications. (Optional)</font><font class="fr">Mention d'honneur dans les publications. (&nbsp;Optionnel&nbsp;)</font></li>
-          </ul>
-
-          <pre class="thin"></pre>
-
-          <p class="linebreak small"><font class="en">Members of the Silver Council have an opportunity to submit resolutions for the Board of Directors, to access archived documents of the organization, and to vote for resolutions at annual Meetings of the Members.</font><font class="fr">Les membres du Conseil Silver ont la possibilité de soumettre des résolutions au conseil d'administration, d'accéder aux documents archivés et de voter pour les résolutions lors des assemblées annuelles des membres.</font></p>
 
         </div>
 
