--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -147,7 +147,7 @@
 
       <!-- If you are interested in a custom print, please contact account office at Animat Habitat, for a quote based on the specific requirements. -->
 
-      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2018-2026. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
 
     </div>
 
