--- a/boutique/medium/oeuvre/index.html
+++ b/boutique/medium/oeuvre/index.html
@@ -78,7 +78,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2018-2026. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
 
     </div>
 
