--- a/canon/index.html
+++ b/canon/index.html
@@ -161,7 +161,7 @@
       <div class="quote">
         <p class="small"><font class="en">&ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Authorized use of the crest, or coporate seal, is limited to directors of Animat Habitat with the explicit purpose of certification of official documents, and with the excepted purpose of its designation in corporate graphical resources. Official documents of the organization are archived and classified in the Animat Habitat <a href="../s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Le nom de l'organisation est une marque non enregistrée qui est protégée aux fins de l'identité corporatif. L'utilisation autorisée du sceau corporatif est limitée aux administrateurs chez Animat Habitat avec le but explicite de certification des documents officiels et avec le but excepté de sa désignation dans les ressources graphiques corporatif. Les documents officiels sont archivés et classés dans le <a href="../s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> Animat Habitat.</font></p>
 
-        <p class="linebreak small">Copyright &copy; 2015 Animat Habitat. <a href="../c/" target="_blank" title="Terms at Animat Habitat"><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a>.</p>
+        <p class="linebreak small">Copyright &copy; Animat Habitat, 2015. <a href="../c/" target="_blank" title="Terms at Animat Habitat"><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a>.</p>
 
       </div>
 
