--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <p class="linebreak small"><font class="en">Thank you for visiting.</font><font class="fr">Merci pour votre visite.</font></p>
 
-        <p class="linebreak small">Copyright &copy; 2015-2025 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a>.</p>
+        <p class="linebreak small">Copyright &copy; Animat Habitat, 2015-2026. <a href="c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a>.</p>
 
       </div>
     </div>
