--- a/patron/index.html
+++ b/patron/index.html
@@ -139,7 +139,7 @@
   <footer class="single">
     <div class="quote">
 
-      <p class="small"><font class="en">Please address any question about donations at Animat Habitat to the secretariat at Animat Habitat</font><font class="fr">Adressez toute question concernant les dons chez Animat Habitat au secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
+      <p class="small"><font class="en">Address any question about patronage at Animat Habitat to the secretariat at Animat Habitat</font><font class="fr">Adressez toute question concernant le mécénat chez Animat Habitat au secrétariat chez Animat Habitat</font> [<font class="fr">&nbsp;</font><a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;:&nbsp;animathabitat.org</a><font class="fr">&nbsp;</font>]<font class="fr">&nbsp;</font>.</p>
 
       <p class="linebreak small"><font class="en">Thank you for your support.</font><font class="fr">Merci pour votre soutien.</font></p>
 
