--- a/scene/i/elephant-conservation-amboseli/index.html
+++ b/scene/i/elephant-conservation-amboseli/index.html
@@ -105,7 +105,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Human-Wildlife Conflict</h3>
-        <p>Imagine that you are an African farmer who earns maybe a few thousand dollars in a year from your crops and you discover a big bull elephant trampling through, destroying your very livelihood in just one night. You might be very tempted to throw that spear that protects your ability to feed your family. This is why Big Life has patrol vehicles out every night, patrolling the land where farmland meets wildlife habitat. Big Life also supplies thunder flashes &ndash; harmless noisy pyrotechnics &ndash; to farmers to help them deter elephants, and prevent damage to their crops. And Big Life has seen success: crop raiding has declined, though not by enough. Even on a continent the size of Africa, every day, humans and wild animals are competing for space as farmland and development encroach further upon the wild places.</p>
+        <p>Imagine that you are an African farmer who earns maybe a few thousand dollars in a year from your crops and you discover a big bull elephant trampling through, destroying your very livelihood in just one night. You might be very tempted to throw that spear that protects your ability to feed your family. This is why Big Life has patrol vehicles out every night, patrolling the land where farmland meets wildlife habitat. Big Life also supplies thunder flashes &ndash; harmless noisy pyrotechnics &ndash; to farmers to help them deter elephants, and prevent damage to their crops. And Big Life has seen success: crop-foraging has declined, though not by enough. Even on a continent the size of Africa, every day, humans and wild animals are competing for space as farmland and development encroach further upon the wild places.</p>
 
         <p class="linebreak">Settlers have planted crops on ancient migratory routes, and staked their livelihood on what used to be prime elephant habitat. From the perspective of the settlers, the elephants run rampant: eating their way through maize fields, knocking down houses, and trampling on people. From the perspective of the elephants, the settlers are in the way: turning migratory routes and elephant habitat into farmlands that either block passage or come close enough to naturally entice the elephants to forage. As humans expand relentlessly into what was once wilderness, there is ever-more likelihood of conflict with wildlife.</p>
 
@@ -201,7 +201,7 @@
     <div class="quote">
       <p class="small">This article was edited March 2023.</p>
 
-      <p class="linebreak small">Copyright &copy; 2019-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2019-2023. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
