--- a/scene/ii/history-of-forests-trees/index.html
+++ b/scene/ii/history-of-forests-trees/index.html
@@ -203,8 +203,7 @@
         <div class="quote" id="footnotes-2">
           <p class="small"><sup>3</sup>&nbsp; D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/youtube/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
           <p class="small"><sup>4</sup>&nbsp; Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/-ca/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
-
-          <!-- YouTube Series of Bateman talks ?? -->
+          <!-- + YouTube Series of Bateman talks -->
 
         </div>
       </div>
@@ -236,7 +235,7 @@
       <div>
         <p>Forests are our most precious natural resource. The Amazon rainforest and Congo rainforest are two of the most important wilderness areas we have today. There are many other forests on land and in the sea. The boreal forest however is estimated to hold hundreds of billions of trees with more than forty per cent of the carbon stored on Earth. Our forests are fundamental in the fight against climate change.<sup>&nbsp;[<a class="button" onclick="fn_3();" title="O'Donovan, 2019.">5</a>]</sup></p>
 
-        <!-- There are also forests in the sea. Kelp forests and then there are coral reefs, <i>the rainforests of the sea</i>. -->
+        <!-- There are also forests in the sea. Kelp forests and then there are coral reefs, the rainforests of the sea. -->
 
         <p class="linebreak">Bob Bateman, in his book of &lsquo;plates and commentaries&rsquo; published in 1990, <i>Robert Bateman: An Artist in Nature</i>, forewarned the importance of forests in the twenty-first century:</p>
 
@@ -305,7 +304,7 @@
     <div class="quote">
       <p class="small">This article was edited March 2025.</p>
 
-      <p class="linebreak small">Copyright &copy; 2023-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2023-2025. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
