--- a/boutique/medium/1/index.html
+++ b/boutique/medium/1/index.html
@@ -92,7 +92,7 @@
         <p>iPhone SE: 640&nbsp;&times;&nbsp;1136 px</p>
       </div> -->
 
-      <p class="linebreak small">Copyright &copy; 2018-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2018-2026. <a href="../../../c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'access</font></a>.</p>
 
     </div>
 
