--- a/scene/i/companion-app-augmented-reality-kit/index.html
+++ b/scene/i/companion-app-augmented-reality-kit/index.html
@@ -63,7 +63,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2024 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2024. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
