--- a/scene/i/elephant-conservation-namibia/index.html
+++ b/scene/i/elephant-conservation-namibia/index.html
@@ -59,7 +59,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2020 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2020. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
