--- a/scene/i/elephant-conservation-zambezi/index.html
+++ b/scene/i/elephant-conservation-zambezi/index.html
@@ -61,7 +61,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2020-2021 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2020-2021. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
