--- a/scene/i/making-of-ella-2/index.html
+++ b/scene/i/making-of-ella-2/index.html
@@ -81,7 +81,7 @@
     <div class="quote">
       <p class="small">This article was edited September 2023.</p>
 
-      <p class="linebreak small">Copyright &copy; 2016-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2016-2023. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
