--- a/scene/i/making-of-ella-4/index.html
+++ b/scene/i/making-of-ella-4/index.html
@@ -60,7 +60,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2023. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
