--- a/scene/i/reference-art-2/index.html
+++ b/scene/i/reference-art-2/index.html
@@ -161,7 +161,7 @@
     <div class="quote">
       <p class="small">This article was edited March 2023.</p>
 
-      <p class="linebreak small">Copyright &copy; 2014-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2014-2023. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
