--- a/scene/ii/the-beginning-of-chapter-two/index.html
+++ b/scene/ii/the-beginning-of-chapter-two/index.html
@@ -183,7 +183,7 @@
     <div class="quote">
       <p class="small">This article was edited March 2025.</p>
 
-      <p class="linebreak small">Copyright &copy; 2021-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2021-2025. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
