--- a/scene/ii/the-beginning-of-painting/index.html
+++ b/scene/ii/the-beginning-of-painting/index.html
@@ -261,7 +261,7 @@
     <div class="quote">
       <p class="small">This article was edited March 2025.</p>
 
-      <p class="linebreak small">Copyright &copy; 2020-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="linebreak small">Copyright &copy; Animat Habitat, 2020-2025. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
