--- a/scene/iii/history-of-whales-beluga/index.html
+++ b/scene/iii/history-of-whales-beluga/index.html
@@ -61,7 +61,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">Copyright &copy; Animat Habitat, 2025. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
