--- a/app/beta/confirmation/1/index.html
+++ b/app/beta/confirmation/1/index.html
@@ -43,7 +43,7 @@
         <p class="linebreak"><a href="../../../" title="Animat Habitat app. Feedback, Commentaires."><font class="en">Companion App Feedback Form</font><font class="fr">Formulaire de commentaires sur l'application compagnon</a></font>.</p>
 
         <h5 class="linebreak"><font class="en">Join as a patron.</font><font class="fr">Rejoignez-nous en tant que patron.</font></h5>
-        <p><font class="en">Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.</font><font class="fr">Recevez un certificat d'adhésion annuel en tant que patron des scènes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <p><font class="en">Receive a certificate of membership as an annual patron of the scenes in wildlife art at Animat Habitat.</font><font class="fr">Recevez un certificat d'adhésion annuel en tant que patron des scènes d'art de la nature chez Animat Habitat.</font></p>
 
         <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
