--- a/rss/confirmation/1/index.html
+++ b/rss/confirmation/1/index.html
@@ -48,7 +48,7 @@
         <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène deux</font> &ndash; <a href="../../../scene/ii/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
         <h5 class="linebreak"><font class="en">Join as a patron.</font><font class="fr">Rejoignez-nous en tant que patron.</font></h5>
-        <p><font class="en">Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.</font><font class="fr">Recevez un certificat d'adhésion annuel en tant que patron des scènes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <p><font class="en">Receive a certificate of membership as an annual patron of the scenes in wildlife art at Animat Habitat.</font><font class="fr">Recevez un certificat d'adhésion annuel en tant que patron des scènes d'art de la nature chez Animat Habitat.</font></p>
 
         <p class="linebreak">Animat Habitat <a href="../../../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
